force-app/main/default/objects/Contact/fields/Admin_contact__c.field-meta.xml
<CustomField>
    <fullName>Admin_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cochez si le contact est en charge de la facturation dans un service administratif.</inlineHelpText>
    <label>Contact administratif ?</label>
    <type>Checkbox</type>
</CustomField>