force-app/main/default/objects/Contact/fields/Couvert_Couvert_sur_lannee__c.field-meta.xml
<CustomField>
    <fullName>Couvert_Couvert_sur_lannee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le contact a-t-il été couvert sur l&apos;année civile 2022 ?</description>
    <inlineHelpText>Le contact a-t-il été couvert sur l&apos;année civile 2022 ?</inlineHelpText>
    <label>Couvert en 2022</label>
    <type>Checkbox</type>
</CustomField>