force-app/main/default/objects/Contact/fields/migrationId__c.field-meta.xml
<CustomField>
    <fullName>migrationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>migrationId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>