force-app/main/default/objects/Contact/fields/Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le contact a demandé à ne pas être destinataire de campagnes publicitaires.</description>
    <inlineHelpText>Le contact a demandé à ne pas être destinataire de campagnes publicitaires.</inlineHelpText>
    <label>Opt-out ?</label>
    <type>Checkbox</type>
</CustomField>