force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACHAT</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIF</fullName>
            </value>
            <value>
                <fullName>AUTRES</fullName>
            </value>
            <value>
                <fullName>CDG/CP</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Conseil</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>DIR CO</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>ECOM</fullName>
            </value>
            <value>
                <fullName>ETUDES</fullName>
            </value>
            <value>
                <fullName>KAM/CATMAN</fullName>
            </value>
            <value>
                <fullName>MEDIA</fullName>
            </value>
            <value>
                <fullName>TRADE/SHOPPER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>