force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Position__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Couvert_Couvert_sur_lannee__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>Opt_out__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les contacts</label>
</ListView>