force-app/main/default/objects/Contact/listViews/Category_Manager.listView-meta.xml
<ListView>
    <fullName>Category_Manager</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>KAM/CATMAN</value>
    </filters>
    <label>Category Manager</label>
</ListView>