force-app/main/default/objects/Contact/listViews/Liste_des_quipes_commerciales_annonceur.listView-meta.xml
<ListView>
    <fullName>Liste_des_quipes_commerciales_annonceur</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Position__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Couvert_Couvert_sur_lannee__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>ACCOUNT.OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>DIR CO,KAM/CATMAN</value>
    </filters>
    <label>Liste des équipes commerciales annonceur</label>
</ListView>